--- a/index.html
+++ b/index.html
@@ -3,35 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CSS - Projeto</title>
-    <link rel="stylesheet" href="./styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"
       rel="stylesheet"
     />
+    <title>Easy Shopping</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <section class="container-left">
-        <h1>Easy Shopping Via Mobile</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lorem
-          justo, sollicitudin vel ultricies sed, eleifend nec metus. Etiam vitae
-          pellentesque dolor.
-        </p>
-        <button>Get Started</button>
-      </section>
-      <section class="container-right">
-        <header>
-          <a>Home </a>
-          <a>Work</a>
-          <a>About</a>
-          <a>Contact</a>
-        </header>
-        <img alt="girl-cellphone" src="./assets/Illustration-3-3.png" />
-      </section>
+    <div class="container-left">
+      <h1>Easy Shopping Via Mobile</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lorem
+        justo, sollicitudin vel ultricies sed, eleifend nec metus. Etiam vitae
+        pellentesque dolor.
+      </p>
+      <button class="button-left">Get Started</button>
+    </div>
+    <div class="container-right">
+      <header>
+        <a class="link-header">Home</a>
+        <a class="link-header">Work</a>
+        <a class="link-header">About</a>
+        <a class="link-header">Contact</a>
+      </header>
+      <img
+        src="./img/Illustration-3-3.png"
+        alt="logo-EasyShopping"
+        class="logo-img"
+      />
     </div>
   </body>
 </html>
+
