--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <title>Easy Shopping</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="container-left">
@@ -30,7 +30,7 @@
         <a class="link-header">Contact</a>
       </header>
       <img
-        src="./img/Illustration-3-3.png"
+        src="./assets/Illustration-3-3.png"
         alt="logo-EasyShopping"
         class="logo-img"
       />
